# simdoc-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/simdoc_mcp/: __init__.py  client.py  server.py
